--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
+    "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.10.0",
     "typescript": "^4.4.2"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.13",
+    "@types/swagger-jsdoc": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
