--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,9 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "linebreak-style": 0,
+        "linebreak-style": "off",
         "new-cap": "off",
-        "object-curly-spacing": "off"
+        "object-curly-spacing": "off",
+        "max-len": "off"
     }
 }
