added sequelize models

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "linebreak-style": "off",
         "new-cap": "off",
         "object-curly-spacing": "off",
-        "max-len": "off"
+        "max-len": "off",
+        "require-jsdoc": "off"
     }
 }
