--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
   "license": "MIT",
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.6.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.5",
+    "sequelize-typescript": "^2.1.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.10.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.7.13",
+    "@types/node": "^16.9.0",
     "@types/swagger-jsdoc": "^6.0.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
