--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.5",
+    "sequelize": "6.6.2",
     "sequelize-typescript": "^2.1.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
