--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voting-api",
   "description": "Api for secure and easy voting.",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "dist/index.ts",
   "scripts": {
     "start": "nodemon dist",
     "build": "yarn swagger && tsc -p",
@@ -15,11 +15,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/sequelize": "^4.28.10",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.6.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "6.6.2",
     "sequelize-typescript": "^2.1.0",
