--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/validator": "^13.6.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
