--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/sequelize": "^4.28.10",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.6.3",
+    "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
