--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/sequelize": "^4.28.10",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/validator": "^13.6.3",
-    "body-parser": "^1.19.0",
-    "concurrently": "^6.2.1",
-    "express": "^4.17.1",
+    "body-parser": "^1.19.1",
+    "concurrently": "^6.5.0",
+    "express": "^4.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "6.6.2",
-    "sequelize-typescript": "^2.1.0",
+    "sequelize": "^6.12.0",
+    "sequelize-typescript": "^2.1.1",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6",
-    "tsoa": "^3.10.0",
-    "typescript": "^4.4.2",
+    "swagger-ui-express": "^4.3.0",
+    "tsoa": "^3.14.1",
+    "typescript": "^4.5.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.9.0",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^17.0.0",
+    "@types/sequelize": "^4.28.10",
     "@types/swagger-jsdoc": "^6.0.1",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.32.0",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.3",
+    "@types/validator": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.4.1",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-vue": "^7.17.0"
+    "eslint-plugin-vue": "^8.2.0"
   }
 }
