--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "swagger-ui-express": "^4.3.0",
     "tsoa": "^3.14.1",
     "typescript": "^4.5.4",
+    "umzug": "3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -38,12 +39,15 @@
     "@types/sequelize": "^4.28.10",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/umzug": "^2.3.3",
     "@types/uuid": "^8.3.3",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "jshint": "^2.13.1",
+    "ts-node": "^10.4.0"
   }
 }
