--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voting-api",
+  "name": "association-panel-api",
   "description": "Api for secure and easy voting.",
   "version": "0.0.1",
   "main": "dist/index.ts",
