--- a/package.json
+++ b/package.json
@@ -15,36 +15,38 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
-    "concurrently": "^6.5.0",
+    "concurrently": "^6.5.1",
     "express": "^4.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.12.0",
+    "sequelize": "^6.12.2",
     "sequelize-typescript": "^2.1.1",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0",
     "tsoa": "^3.14.1",
     "typescript": "^4.5.4",
-    "umzug": "3",
+    "umzug": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "^17.0.0",
-    "@types/sequelize": "^4.28.10",
+    "@types/node": "^17.0.5",
+    "@types/sequelize": "^4.28.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/umzug": "^2.3.3",
     "@types/uuid": "^8.3.3",
-    "@types/validator": "^13.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.4.1",
+    "@types/validator": "^13.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.2.0",
     "jshint": "^2.13.1",
